// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectBox should render the appropriate automation id's when a qaHook is provided 1`] = `
<div
  className="xui-select"
  data-automationid="test-selectbox"
>
  <div
    className=""
  >
    <label
      className="xui-text-label xui-fieldlabel-layout"
      data-automationid="test-selectbox---label--label"
      htmlFor="testThisSelect-control"
    >
      test
    </label>
    <div
      className="xui-select-layout"
      data-automationid="test-selectbox---inputgroup"
    >
      <div
        data-automationid="test-selectbox---dropdowntoggled"
        data-ref="toggled-wrapper"
        role="presentation"
      >
        <button
          aria-activedescendant={null}
          aria-haspopup="listbox"
          className="xui-button xui-select--button xui-select--button-no-variant xui-button-standard xui-button-medium xui-button-fullwidth"
          data-automationid="test-selectbox---button"
          disabled={false}
          id="testThisSelect-control"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="xui-select--content xui-select--content-truncated"
          >
            test
          </span>
          <svg
            className="xui-icon xui-select--caret xui-button--caret"
            data-automationid="test-selectbox---button-icon"
            focusable="false"
            height={5}
            viewBox="0 0 10 5"
            width={10}
          >
            <title>
              Toggle list
            </title>
            <path
              d="M0 0l5 5 5-5z"
              role="presentation"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectBox should render the trigger in a disabled state if \`isDisabled\` is set 1`] = `
<div
  className="xui-select"
>
  <div
    className=""
  >
    <label
      className="xui-text-label xui-fieldlabel-layout"
      data-automationid={null}
      htmlFor="testSelectBoxId-control"
    >
      test
    </label>
    <div
      className="xui-select-layout"
      data-automationid={null}
    >
      <div
        data-automationid={null}
        data-ref="toggled-wrapper"
        role="presentation"
      >
        <button
          aria-activedescendant={null}
          aria-haspopup="listbox"
          className="xui-button xui-select--button xui-select--button-no-variant xui-button-standard xui-button-medium xui-button-fullwidth xui-button-is-disabled"
          data-automationid={null}
          disabled={true}
          id="testSelectBoxId-control"
          onClick={[Function]}
          onKeyDown={null}
          onKeyUp={[Function]}
          tabIndex={-1}
          type="button"
        >
          <span
            className="xui-select--content xui-select--content-truncated"
          >
            test
          </span>
          <svg
            className="xui-icon xui-select--caret xui-button--caret"
            data-automationid={null}
            focusable="false"
            height={5}
            viewBox="0 0 10 5"
            width={10}
          >
            <title>
              Toggle list
            </title>
            <path
              d="M0 0l5 5 5-5z"
              role="presentation"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
